koizumu/elb.tf
resource "aws_lb" "example" {
  name                       = "example"
  load_balancer_type         = "application"
  internal                   = false
  idle_timeout               = 60
  enable_deletion_protection = true

  subnets = [
    aws_subnet.example_public_subnet_0.id,
    aws_subnet.example_public_subnet_1.id,
  ]

  access_logs {
    bucket  = aws_s3_bucket.alb_log.id
    enabled = true
  }

  security_groups = [
    module.http_sg.security_group_id,
    module.https_sg.security_group_id,
    module.http_redirect_sg.security_group_id,
  ]
}

output "alb_dns_name" {
  value = aws_lb.example.dns_name
}

###################
###############
############

module "http_sg" {
  source      = "./security_groups"
  name        = "http-sg"
  vpc_id      = aws_vpc.example_vpc.id
  port        = 80
  cidr_blocks = ["0.0.0.0/0"]
}

module "https_sg" {
  source      = "./security_groups"
  name        = "https-sg"
  vpc_id      = aws_vpc.example_vpc.id
  port        = 443
  cidr_blocks = ["0.0.0.0/0"]
}

module "http_redirect_sg" {
  source      = "./security_groups"
  name        = "http-redirect-sg"
  vpc_id      = aws_vpc.example_vpc.id
  port        = 8080
  cidr_blocks = ["0.0.0.0/0"]
}


//リスナー
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.example.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "これは『HTTP』です"
      status_code  = "200"
    }
  }
}

resource "aws_lb_target_group" "example_target_group" {
  name                 = "target-group"
  target_type          = "ip"
  vpc_id               = aws_vpc.example_vpc.id
  port                 = 80
  protocol             = "HTTP"
  deregistration_delay = 300

  health_check {
    path                = "/"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    timeout             = 5
    interval            = 30
    matcher             = 200
    port                = "traffic-port" // port 80
    protocol            = "HTTP"
  }

  depends_on = [aws_lb.example] //エラー回避
}

resource "aws_lb_listener_rule" "example_listener_rule" {
  listener_arn = aws_lb_listener.http.arn
  priority     = 100
  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.example_target_group.arn
  }

  condition {
    path_pattern {
      values = [ "/*" ]
    }
  }

}
