koizumu/listen.tf
# resource "aws_lb_listener" "name" {
#   load_balancer_arn = aws_alb.example.arn
#   port              = "80"
#   protocol          = "HTTP"

#   default_action {
#     type = "fixed-response"

#     fixed_response {
#       content_type = "text/plain"
#       message_body = "これは「HTTP」です"
#       status_code  = "200"
#     }
#   }
# }
